--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-web": "^0.17.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
